# mockmarket-sdk

./: README.md  example_arena_bot.py  example_bot.py  pyproject.toml
.github/workflows/: publish.yml
src/mockmarket/: __init__.py  _analytics.py  _arena.py  _base.py  _market.py  _orders.py  _risk.py  _sandbox.py  _sandboxes.py  client.py  exceptions.py  schemas.py
src/mockmarket_sdk/: __init__.py  _analytics.py  _base.py  _market.py  _orders.py  _risk.py  _sandboxes.py  client.py
