[project]
name = "mockmarket"
version = "0.2.0"
description = "Async Python SDK for the MockMarket reactive exchange simulator"
readme = "README.md"
authors = [
    { name = "xsenos", email = "chel.pchelov2010@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ws = [
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
mypy_path = ["src"]

# ``websockets`` is an optional extra imported lazily in ArenaClient.stream.
[[tool.mypy.overrides]]
module = ["websockets", "websockets.*"]
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

